--- a/config/index.html
+++ b/config/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link rel='stylesheet' type='text/css' href='/bower_components/slate/dist/css/slate.min.css'>
-  <link rel='stylesheet' type='text/css' href='/config/css/style.css'>
+  <link rel='stylesheet' type='text/css' href='bower_components/Slate/dist/css/slate.min.css'>
+  <link rel='stylesheet' type='text/css' href='css/style.css'>
 </head>
 <body>
   <div class='item-container'>
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <script src='/bower_components/slate/dist/js/slate.min.js'></script>
-  <script src='/config/js/main.js'></script>
+  <script src='bower_components/Slate/dist/js/slate.min.js'></script>
+  <script src='js/main.js'></script>
 </body>
 </html>
